addressing #56 all builds reviewed need change on wiki page: how to build the product, also need change on CI server in addition, fix minor checkstyle error for #55